; ModuleID = '/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_tgJson.c_tgStopQueryJson.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/modules/http/src/extr_tgJson.c_tgStopQueryJson.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@JsonObjEnd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tgStopQueryJson(i32* %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @httpMallocJsonBuf(i32* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %22

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @httpJsonItemToken(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @httpJsonPairStatus(i32* %14, i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = load i32, i32* @JsonObjEnd, align 4
  %21 = call i32 @httpJsonToken(i32* %19, i32 %20)
  br label %22

22:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32* @httpMallocJsonBuf(i32*) #1

declare dso_local i32 @httpJsonItemToken(i32*) #1

declare dso_local i32 @httpJsonPairStatus(i32*, i32) #1

declare dso_local i32 @httpJsonToken(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
